--- a/ruoyi-generator/src/main/resources/vm/java/domain.java.vm
+++ b/ruoyi-generator/src/main/resources/vm/java/domain.java.vm
@@ -3,6 +3,7 @@ package ${packageName}.domain;
 #foreach ($import in $importList)
 import ${import};
 #end
+import com.ruoyi.common.core.domain.BaseEntity;
 import lombok.Data;
 import lombok.ToString;
 import com.baomidou.mybatisplus.annotation.TableName;
